--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">Theater Time</string>
     <string name="action_about">About</string>
+    <string name="action1_title">Theater Time</string>
+    <string name="action1_default_description">Turn On / Off Theater Mode on watch</string>
+    <string name="action1_description">Total control over theater mode</string>
 
+    <string name="action1_field_duration_title">On/OFF</string>
+    <string name="action1_field_duration_description">On/OFF</string>
+    <string name="duration_long">on</string>
+    <string name="duration_short">off</string>
 
     <string name="title_activity_welcome">Welcome</string>
     <string name="issues">Report bug</string>
