Added: Checkbix for charge event Added: Root detection Added: Tutorial on how to root

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_square">Hello Square World!</string>
     <string name="title_activity_theater_mode_on">TheaterModeOn</string>
     <string name="title_activity_theater_mode_off">TheaterModeOff</string>
+    <string name="title_activity_no_root_available">NoRootAvailable</string>
 
 </resources>
