--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="issues">Report bug</string>
     <string name="webpage">Visit my site</string>
     <string name="mail">Email me!</string>
+    <string name="action_root">Root your watch</string>
 </resources>
