Added: Primitive tasker integration Fixed: Developer URL in more apps menu
NOTE: Tasker plugin still does not send the command to the watch

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="webpage">Visit my site</string>
     <string name="mail">Email me!</string>
     <string name="action_root">Root your watch</string>
+    <string name="title_activity_tasker_settings">TaskerSettings</string>
 </resources>
